<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|fill_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companyName" />

        <EditText
            android:id="@+id/companyNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Company Name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/profileDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generalDescription" />

        <EditText
            android:id="@+id/generalDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:ems="10"
            android:hint="e.g. I have 20 years experience fixing washers."
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/phoneNumber" />

        <EditText
            android:id="@+id/phoneNumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="XXXXXXXXXX"
            android:inputType="number" />

        <TextView
            android:id="@+id/streetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Street" />

        <EditText
            android:id="@+id/streetAddressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="e.g. 123 Main St"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/postalCode"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Postal Code" />

            <EditText
                android:id="@+id/postalCodeText"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="XXXXXX"
                android:inputType="textCapCharacters" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cityProvince"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Province" />

            <EditText
                android:id="@+id/provinceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="e.g. Ontario"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countryName"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="City" />

            <EditText
                android:id="@+id/cityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="e.g. Ottawa"
                android:inputType="textPersonName" />

        </LinearLayout>

        <TextView
            android:id="@+id/licensed"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Are You Licensed?" />

        <RadioGroup
            android:id="@+id/licensedRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/yesRadio">

            <RadioButton
                android:id="@+id/yesRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/noRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />
        </RadioGroup>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickCreateProfile"
            android:text="Create Profile" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>